--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0"
+  },
+  "engines": {
+    "node": "^22.0.0"
   }
 }
