--- a/.github/workflows/simulate-bot-pr.yaml
+++ b/.github/workflows/simulate-bot-pr.yaml
@@ -25,6 +25,11 @@ jobs:
           fetch-depth: 0
           filter: tree:0
 
+      - name: Configure GIT
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
@@ -36,20 +41,22 @@ jobs:
       - name: Update package.json
         run: npm install -D @softarc/sheriff-core @softarc/eslint-plugin-sheriff
 
+      - name: Commit package.json updates
+        run: |
+          git add .
+          git commit -m "chore: update packages [automation]
+        
       - name: Update Changelog
         run: echo "### Changelog Updated" >> CHANGELOG.md
 
-      - name: Configure GIT
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
       - name: Commit Changes
         run: |
-          git commit -m "chore: update packages [automated]"
+          git add .
+          git commit -m "chore: update changelog [automated]"
 
       - name: Push Changes
-        run: git push --set-upstream origin ${{ env.BRANCH_NAME }} ${{ inputs.dry_run && '--dry-run' || '' }}
+        run: |
+          git push --set-upstream origin ${{ env.BRANCH_NAME }} --force ${{ inputs.dry_run && '--dry-run' || '' }}
 
       - name: Create Labels
         run: |
