--- a/.github/workflows/simulate-bot-pr.yaml
+++ b/.github/workflows/simulate-bot-pr.yaml
@@ -18,7 +18,7 @@ permissions:
   
 env:
   BRANCH_NAME: chore/update-packages-bot
-  GH_TOKEN: ${{ github.token }}
+  GH_TOKEN: ${{ secrets.PR_CREATE_PAT }}
   
 jobs:
   simulate-pr:
