Fix typo in assignee field in workflow file

--- a/.github/workflows/simulate-bot-pr.yaml
+++ b/.github/workflows/simulate-bot-pr.yaml
@@ -81,7 +81,7 @@ jobs:
             --body "Update Packages" \
             --title "chore: update packages [automation]" \
             --label "automation-bot,npm-install-success,dependencies" \
-            --asignee "Github Actions[bot]" \
+            --assignee "Github Actions[bot]" \
             ${{ inputs.dry_run && '--dry-run' || '' }}
 
         
