Fix package.json file read path in workflow

--- a/.github/workflows/simulate-bot-pr.yaml
+++ b/.github/workflows/simulate-bot-pr.yaml
@@ -52,7 +52,7 @@ jobs:
         with:
           script: |
             const fs = require('node:fs');
-            const packageJsonString = fs.readFileSync('package-json', { encoding: 'utf8' });
+            const packageJsonString = fs.readFileSync('package.json', { encoding: 'utf8' });
             const packageJson = JSON.parse(packageJsonString);
             packageJson.description = "description ${{ github.run_number }} ${{ github.run_id }}"
             fs.writeFileSync('package.json', JSON.stringify(packageJson, null, 2));
