--- a/.github/workflows/simulate-bot-pr.yaml
+++ b/.github/workflows/simulate-bot-pr.yaml
@@ -81,6 +81,8 @@ jobs:
           gh label create dependencies --color 0E8A16 --force
 
       - name: Create PR
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh pr create \
             --base ${{ github.event.repository.default_branch }} \
